--- a/shared/latex/supervised/demo-catboost-gradient-boosting.tex
+++ b/shared/latex/supervised/demo-catboost-gradient-boosting.tex
@@ -1,3 +1,3 @@
-\begin{frame}{Démonstration sklearn}
+\begin{frame}{Démonstration \texttt{catboost}}
   \bluelink{https://colab.research.google.com/drive/1NHqqZSB_cVndX7r_QS4vQQsV2I3x9vEW\#forceEdit=true&sandboxMode=true}{Instructions}
 \end{frame}
