--- a/shared/latex/supervised/demo-sklearn-svm.tex
+++ b/shared/latex/supervised/demo-sklearn-svm.tex
@@ -1,3 +1,3 @@
-\begin{frame}{Démonstration sklearn}
+\begin{frame}{Démonstration \texttt{sklearn}}
   \bluelink{https://colab.research.google.com/drive/1qbf95qZj0rW0cSzfIXUDHGwe0KrTOe8f\#forceEdit=true&sandboxMode=true}{Instructions}
 \end{frame}
