--- a/shared/latex/supervised/svm.tex
+++ b/shared/latex/supervised/svm.tex
@@ -1,35 +1,32 @@
-\begin{frame}{Support Vector Machine}
+\begin{frame}{Données séparables linéairement}
   \V{["img/separable-problem-linear-nzmog", "tw", 0.8] | image}
 \end{frame}
 
-\begin{frame}{Support Vector Machine}
+\begin{frame}{Mauvaise solution — Données d'entraînement}
   \V{["img/separable-problem-linear-solution-nzmog", "tw", 0.8] | image}
 \end{frame}
 
-\begin{frame}{Support Vector Machine}
+\begin{frame}{Mauvaise solution — Nouvelles données}
   \V{["img/separable-problem-linear-solution-bad-nzmog", "tw", 0.8] | image}
 \end{frame}
 
-\begin{frame}{Support Vector Machine}
+\begin{frame}{Solution d'un séparateur à vaste marge}
   \V{["img/svm-schema-nzmog", "tw", 0.8] | image}
 \end{frame}
 
-\begin{frame}{Support Vector Machine}
-  \V{["img/svm-schema-nzmog", "tw", 0.9] | image}
-\end{frame}
-
-\begin{frame}{Support Vector Machine}
+\begin{frame}{Données non séparables linéairement}
   \V{["plt/separable-problem-nonlinear-solution", "th", 0.75] | image}
 \end{frame}
 
-\begin{frame}{Support Vector Machine}
+\begin{frame}{Transformation par un noyau (ici polynômial)}
   \V{["plt/separable-problem-nonlinear-kernelsvm", "th", 0.75] | image}
 \end{frame}
 
-\begin{frame}{Support Vector Machine}
-  Généralisation à un problème de régression logistique à $K>2$ classes :
-  \begin{itemize}
-  \item One Vs All : K modèles. Agréagation par meilleur score.
-  \item One Vs One : $\frac{K(K-1)}{2}$ modèles. Vote majoritaire.
-  \end{itemize}
+\begin{frame}{Stratégies pour la classification multi-classes}
+  Pour un problème à $k$ classes~:
+
+  \begin{description}
+    \item[Un contre le reste] $k$ modèles. Agrégation par meilleur score.
+    \item[Un contre un] $\frac{k(k - 1)}{2}$ modèles. Vote majoritaire.
+  \end{description}
 \end{frame}
