Correction du lien vers la visualisation CNN de aharley

--- a/shared/latex/nn/cnn/model.tex
+++ b/shared/latex/nn/cnn/model.tex
@@ -85,5 +85,5 @@
 \end{frame}
 
 \begin{frame}{Démonstration}
-  \bluelink{https://www.cs.ryerson.ca/~aharley/vis/conv/}{Convolutional neural networks}
+  \bluelink{http://www.cs.cmu.edu/~aharley/nn_vis/cnn/3d.html}{Convolutional neural networks}
 \end{frame}
