Fix small MLB bayes stuff
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/figures/tikz/bayesian/net.tex
+++ b/figures/tikz/bayesian/net.tex
@@ -32,7 +32,7 @@
         \textbf{Arroseur} & \textbf{Pluie} & \textbf{Vrai} & \textbf{Faux} \\
         \midrule
         \textbf{Faux} & \textbf{Faux} & 0 & 1 \\
-        \textbf{Vrai} & \textbf{Vrai} & 0.9 & 0.2 \\
+        \textbf{Faux} & \textbf{Vrai} & 0.8 & 0.2 \\
         \textbf{Vrai} & \textbf{Faux} & 0.9 & 0.1 \\
         \textbf{Vrai} & \textbf{Vrai} & 0.99 & 0.01 \\
       \end{tabular}
