Add small fixes NPY
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/linting/linting.tex
+++ b/shared/latex/python/linting/linting.tex
@@ -28,7 +28,7 @@
     \item \texttt{RedBaron}
   \end{itemize}
 
-  On utilise aussi beaucoup \texttt{mypy} pour vérifier les types.
+  On utilise aussi beaucoup \texttt{mypy} pour vérifier les types \& \texttt{black} pour le formatage.
 \end{frame}
 
 \begin{frame}{Typage}
