Mise à jour structure support DPL -- Suppression GAN + homogenisation transformeurs

--- a/shared/latex/nn/help-pointers.tex
+++ b/shared/latex/nn/help-pointers.tex
@@ -1,5 +1,9 @@
 
 \begin{frame}{Ressource complémentaires}
-    \bluelink{https://fr.coursera.org/projects/multi-task-models-keras}{Modèles multi-tâches sur Coursera}   
+    \begin{itemize}
+        \item \bluelink{https://fr.coursera.org/projects/multi-task-models-keras}{Modèles multi-tâches sur Coursera}    
+        \item \bluelink{hhttp://jalammar.github.io/illustrated-transformer/}{Billet de blog de Jay Alammar sur les transformeurs~:}  
+    \end{itemize}
+    
 \end{frame}
 
