Workaround beamer bug regarding xcolor options
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/templates/jinja2/main.tex
+++ b/templates/jinja2/main.tex
@@ -2,8 +2,9 @@
 \newcommand{\\V{k | camelcase}}{\V{v}}
 %% endfor
 
+\PassOptionsToPackage{dvipsnames,hyperref,usenames,table}{xcolor}
+
 \documentclass[
-  xcolor={dvipsnames,hyperref,usenames,table},
   hyperref={hidelinks},
   \PresentationSize\BLOCK{if handout},handout\BLOCK{endif}
   ]{beamer}
