--- a/shared/latex/nlp/preprocessing.tex
+++ b/shared/latex/nlp/preprocessing.tex
@@ -54,7 +54,7 @@
   \end{tabular}
 \end{frame}
 
-\begin{frame}{Outlis --- WordNet}
+\begin{frame}{Outils --- WordNet}
   \V{["img/wordnet-1", "th", 0.7] | image}  
   Projet sur le français : WOLF (Wordnet Libre du Français) 
 \end{frame}
