--- a/shared/latex/nn/help-pointers.tex
+++ b/shared/latex/nn/help-pointers.tex
@@ -2,7 +2,7 @@
 \begin{frame}{Ressource complémentaires}
     \begin{itemize}
         \item \bluelink{https://fr.coursera.org/projects/multi-task-models-keras}{Modèles multi-tâches sur Coursera}    
-        \item \bluelink{hhttp://jalammar.github.io/illustrated-transformer/}{Billet de blog de Jay Alammar sur les transformeurs~:}  
+        \item \bluelink{http://jalammar.github.io/illustrated-transformer/}{Billet de blog de Jay Alammar sur les transformeurs~:}  
     \end{itemize}
     
 \end{frame}
