--- a/shared/latex/tools/cloud-computing.tex
+++ b/shared/latex/tools/cloud-computing.tex
@@ -1,15 +1,12 @@
-\begin{frame}
-  \frametitle{Cloud Computing}
+\begin{frame}{Cloud Computing}
   \begin{minipage}[l]{0.49\linewidth}
-    \V{["img/logos/aws", "tw", 0.4] | image}
-    \small{$\;$} \\
-    \V{["img/logos/gcloud", "tw", 0.7] | image}
-    \small{$\;$} \\
-    \V{["img/logos/ibm", "tw", 0.4] | image}
+    \V{["img/logos/aws", "th", 0.1] | image}
+    \V{["img/logos/gcloud", "th", 0.1] | image}
+    \V{["img/logos/ibm", "th", 0.1] | image}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.49\linewidth}
-    \V{["img/logos/azure", "tw", 0.5] | image}
-    \V{["img/logos/ovh", "tw", 0.5] | image}
-    \V{["img/logos/citrix", "tw", 0.5] | image}
+    \V{["img/logos/azure", "th", 0.1] | image}
+    \V{["img/logos/ovh", "th", 0.1] | image}
+    \V{["img/logos/citrix", "th", 0.1] | image}
   \end{minipage}\hfill
 \end{frame}
