--- a/shared/latex/tools/engineering.tex
+++ b/shared/latex/tools/engineering.tex
@@ -2,7 +2,7 @@
   Buts~:
   \begin{itemize}[<+->]
     \item Collaborer
-    \item Contrôler le source code\textbf{, les modèles \& les données}
+    \item Contrôler le code source\textbf{, les modèles \& les données}
     \item Déployer facilement
   \end{itemize}
 \end{frame}
