--- a/shared/latex/tools/ml-dl.tex
+++ b/shared/latex/tools/ml-dl.tex
@@ -24,6 +24,7 @@
 
 \begin{frame}{Deep Learning pour le texte}
   \begin{itemize}[<+->]
+    \item \bluelink{https://huggingface.co/}{Hugging Face}
     \item \bluelink{https://demo.allennlp.org/}{AllenNLP}
     \item \bluelink{https://spacy.io/api}{spaCy}
   \end{itemize}
