add midjourney to ai/history

--- a/shared/latex/ai/history.tex
+++ b/shared/latex/ai/history.tex
@@ -62,3 +62,7 @@
 \begin{frame}{2021 --- Alphafold, retrouve la configuration 3D de molécules}
   \V{["img/foldit", "tw", 0.6] | image}
 \end{frame}
+
+\begin{frame}{2022 --- MidJourney, gagne un concours d'art au Colorado}
+  \V{["img/midjourney-win-art-contest", "tw", 0.95] | image}
+\end{frame}
