un coup de polish marketing

--- a/shared/latex/ml/intro.tex
+++ b/shared/latex/ml/intro.tex
@@ -122,8 +122,8 @@
   \begin{itemize}
   \item le machine learning est un champ vaste.
   \item il existe sûrement un modèle/paradigme pour vos besoins
-  \item l'important est de définir les bons critères
   \end{itemize}
+  le nombre de contraintes/critères font qu'il n'y a pas de graphe de synthèse pour choisir une solution.
 \end{frame}
 
 \begin{frame}{Discussion}
@@ -135,3 +135,6 @@
   \item quelles sont vos contraintes ?
   \end{itemize}
 \end{frame}
+
+
+
