--- a/shared/latex/prerequisites/probabilities.tex
+++ b/shared/latex/prerequisites/probabilities.tex
@@ -1,6 +1,5 @@
 
-\begin{frame}
-  \frametitle{Utilité}
+\begin{frame}{Utilité}
   \begin{itemize}
   \item quantifier l'incertain
   \item support pour les statistiques
@@ -20,8 +19,7 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Loi de probabilité}
+\begin{frame}{Loi de probabilité}
 
   Décrit le comportement aléatoire d'un phénomène dépendant du hasard.
   \begin{columns}
