--- a/shared/latex/supervised/regression-lineaire.tex
+++ b/shared/latex/supervised/regression-lineaire.tex
@@ -3,9 +3,9 @@
 
   Trouver $f: x_i \mapsto \hat{y_i}$ telle que $\hat{y_i} = \theta_0 + \theta_1 x_i$
 
-  On souhaite minimiser l'erreur commise~:
+  On souhaite minimiser l'erreur commise, par exemple~:
   \[
-    \argmin_f \sum_i \hat{y_i} - y_i
+    \argmin_f \sum_i \lvert \hat{y_i} - y_i \rvert
   \]
 \end{frame}
 
