Ajout du logo MLambda dans le fichier formateur.tex

--- a/shared/latex/about/formateur.tex
+++ b/shared/latex/about/formateur.tex
@@ -1,9 +1,15 @@
 \begin{frame}{Présentation \& coordonnées}
-  \begin{description}
-    \item[Nom] \TrainerName
-    \item[Courriel] \TrainerEmail
-    \item[Activité] \TrainerActivity
-    \item[Spécialité] \TrainerSpecialization
-    \item[Parcours] \TrainerTraining
-  \end{description}
+  \begin{minipage}[b]{0.80\linewidth}
+    \begin{description}
+      \item[Nom] \TrainerName
+      \item[Courriel] \TrainerEmail
+      \item[Activité] \TrainerActivity
+      \item[Spécialité] \TrainerSpecialization
+      \item[Parcours] \TrainerTraining
+    \end{description}
+  \end{minipage}
+  \begin{minipage}[b]{0.15\linewidth}
+    \raggedright
+    \V{["img/logos/mlambda", "tw", 1] | image}
+  \end{minipage}
 \end{frame}
