Ajustement de la place du logo sur la page formateur

--- a/shared/latex/about/formateur.tex
+++ b/shared/latex/about/formateur.tex
@@ -1,15 +1,12 @@
 \begin{frame}{Présentation \& coordonnées}
-  \begin{minipage}[b]{0.80\linewidth}
-    \begin{description}
-      \item[Nom] \TrainerName
-      \item[Courriel] \TrainerEmail
-      \item[Activité] \TrainerActivity
-      \item[Spécialité] \TrainerSpecialization
-      \item[Parcours] \TrainerTraining
-    \end{description}
-  \end{minipage}
-  \begin{minipage}[b]{0.15\linewidth}
-    \raggedright
-    \V{["img/logos/mlambda", "tw", 1] | image}
-  \end{minipage}
+  \begin{description}
+    \item[Nom] \TrainerName
+    \item[Courriel] \TrainerEmail
+    \item[Activité] \TrainerActivity
+    \item[Spécialité] \TrainerSpecialization
+    \item[Parcours] \TrainerTraining
+  \end{description}
+  \begin{center}
+    \V{["img/logos/mlambda", "tw", 0.2] | image}
+  \end{center}
 \end{frame}
