Fix missing = in ReLUs demo
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/nn/intro.tex
+++ b/shared/latex/nn/intro.tex
@@ -216,7 +216,7 @@
   \V{["tikz/activations/approximation", "tw", 1] | image}
   {\small
     \begin{align*}
-      n_1 & = \ReLU(-5x - 7.7) & n_2 & \ReLU(-1.2x - 1.3) & n_3 & = \ReLU(1.2x + 1) \\
+      n_1 & = \ReLU(-5x - 7.7) & n_2 & = \ReLU(-1.2x - 1.3) & n_3 & = \ReLU(1.2x + 1) \\
       n_4 & = \ReLU(1.2x - 0.2) & n_5 & = \ReLU(2x - 1.1) & n_6 & = \ReLU(5x - 5) \\
     \end{align*}
   }
