Improve advanced for pyp
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/advanced/tp-decorators.tex
+++ b/shared/latex/python/advanced/tp-decorators.tex
@@ -1,3 +1,3 @@
 \begin{frame}{Travaux pratiques}
-  \bluelink{https://colab.research.google.com/drive/1Kf2ApS17YJmkbyGU9HuKr5_Vf1f7-7Ig\#forceEdit=true&sandboxMode=true}{Manipulation de décorateurs}
+  \bluelink{https://colab.research.google.com/drive/1Kf2ApS17YJmkbyGU9HuKr5_Vf1f7-7Ig\#forceEdit=true&sandboxMode=true}{Instructions}
 \end{frame}
