--- a/shared/latex/python/advanced/tp-context-managers.tex
+++ b/shared/latex/python/advanced/tp-context-managers.tex
@@ -1,3 +1,3 @@
 \begin{frame}{Travaux pratiques}
-  \bluelink{https://colab.research.google.com/drive/1XZApUlLrdaibg4PL-BbULphv0HXoMnMo\#forceEdit=true&sandboxMode=true}{Manipulation de gestionnaires de contexte}  
+  \bluelink{https://colab.research.google.com/drive/1XZApUlLrdaibg4PL-BbULphv0HXoMnMo\#forceEdit=true&sandboxMode=true}{Instructions}
 \end{frame}
