--- a/shared/latex/python/advanced/tp-metaclasses.tex
+++ b/shared/latex/python/advanced/tp-metaclasses.tex
@@ -1,3 +1,3 @@
 \begin{frame}{Travaux pratiques}
-  \bluelink{https://colab.research.google.com/drive/1ESnv-7-cNVnpZhPW8JpviasM7p9fgPwg\#forceEdit=true&sandboxMode=true}{Manipulation de méta-classes}
+  \bluelink{https://colab.research.google.com/drive/1ESnv-7-cNVnpZhPW8JpviasM7p9fgPwg\#forceEdit=true&sandboxMode=true}{Instructions}
 \end{frame}
