--- a/shared/latex/python/advanced/tp.tex
+++ b/shared/latex/python/advanced/tp.tex
@@ -1,3 +1,3 @@
-\begin{frame}{Instructions}
-  \bluelink{https://colab.research.google.com/drive/1TZY80Zk3Hjft0-Yw77W7Q_T-hn0MXVZo\#forceEdit=true&sandboxMode=true}{Éléments avancés de Python}
+\begin{frame}{Travaux pratiques}
+  \bluelink{https://colab.research.google.com/drive/1TZY80Zk3Hjft0-Yw77W7Q_T-hn0MXVZo\#forceEdit=true&sandboxMode=true}{Instructions}
 \end{frame}
