Work on databases & sockets for PYP
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/databases/overview.tex
+++ b/shared/latex/python/databases/overview.tex
@@ -7,21 +7,21 @@
 \begin{frame}{Connexion à une base de données}
   Avec l'URL de la base de données (ici par exemple pour une BDD de débug)~:
 
-  \mintedpycode{python/sys-admin/db-connect}
+  \mintedpycode{python/databases/connect}
 \end{frame}
 
 \begin{frame}{Lecture de données}
-  \mintedpycode{python/sys-admin/db-read}
+  \mintedpycode{python/databases/read}
 \end{frame}
 
 \begin{frame}{Écriture de données}
-  \mintedpycode{python/sys-admin/db-write}
+  \mintedpycode{python/databases/write}
 \end{frame}
 
 \begin{frame}{Pour aller plus loin}
   Pour les scripts complexes, SQLAlchemy propose aussi un ORM~:
 
-  \begin{itemize}[<+->]
+  \begin{itemize}
     \item Correspondance entre les objets Pythons et les objets en base
     \item Construction facilitée de requêtes
     \item Typage fort
