Add link to interfaces lab
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/advanced/tp-interfaces.tex
+++ b/shared/latex/python/advanced/tp-interfaces.tex
@@ -1,3 +1,3 @@
 \begin{frame}{Travaux pratiques}
-  \bluelink{}{Instructions}
+  \bluelink{https://colab.research.google.com/drive/1XMxAVdikWvF2zMb0UBXgyhlXrOpThPlU\#forceEdit=true&sandboxMode=true}{Instructions}
 \end{frame}
