Add lab to databases & mention Alembic
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/databases/full.tex
+++ b/shared/latex/python/databases/full.tex
@@ -45,6 +45,12 @@
   Seulement un sous-ensemble de fonctionnalités est exposé pour certaines BDDs.
 \end{frame}
 
+\begin{frame}{Gestion des migrations}
+  Pour gérer l'évolution d'une base de données, SQLAlchemy a un projet dédié~:
+
+  \bluelink{https://alembic.sqlalchemy.org/}{Alembic}
+\end{frame}
+
 \begin{frame}{Pour aller plus loin}
   \bluelink{https://docs.sqlalchemy.org/en/14/tutorial/index.html}{Cours SQLAlchemy}
 \end{frame}
