Fix small detail about gRPC
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/network/network.tex
+++ b/shared/latex/python/network/network.tex
@@ -75,9 +75,5 @@
 \end{frame}
 
 \begin{frame}{Alternatives}
-  Utiliser des surcouches, comme~:
-  \begin{description}
-    \item[\bluelink{https://grpc.io/docs/languages/python/}{gRPC}] Protocole de sérialisation binaire extrêmement performant
-    \item[HTTP] Avec par exemple \bluelink{https://flask.palletsprojects.com/}{Flask}
-  \end{description}
+  Utiliser des surcouches, comme HTTP avec \bluelink{https://flask.palletsprojects.com/}{Flask}, ou une surcouche de HTTP comme \bluelink{https://grpc.io/docs/languages/python/}{gRPC}, un protocole de RPC avec sérialisation binaire extrêmement performant.
 \end{frame}
