Fix two typos in IAO
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/engineering/data-engineering.tex
+++ b/shared/latex/engineering/data-engineering.tex
@@ -27,7 +27,7 @@
 
 \begin{frame}{Étapes de traitement}
   \begin{enumerate}[<+->]
-    \item Récupération depuis la source original, intégration au lac de données
+    \item Récupération depuis la source originale, intégration au lac de données
     \item Normalisation générale, adjonction d'une version
     \item Normalisation spécifique
   \end{enumerate}  
