--- a/shared/latex/sectors/transport.tex
+++ b/shared/latex/sectors/transport.tex
@@ -61,8 +61,8 @@
   \begin{columns}
     \begin{column}{0.6\textwidth}
       \begin{itemize}
-        \item 6 accident mortels implicant des voitures autonomes (5 Tesla, 1 Uber).
-        \item Au 7 mai 2016 ---~2ème accident~--- Autopilot avait parcouru 210 millions de kilomètres.
+        \item 6 accidents mortels implicant des voitures autonomes (5 Tesla, 1 Uber).
+        \item Au 7 mai 2016 ---~2\ieme{} accident~--- Autopilot avait parcouru 210 millions de kilomètres.
         \item 1 seul (Uber) ou le pilote automatique est mis en cause.
       \end{itemize}
     \end{column}
