adieu caltech, bonjour imagenet 21K

--- a/shared/latex/en/nn/cnn/data.tex
+++ b/shared/latex/en/nn/cnn/data.tex
@@ -3,11 +3,6 @@
   \V{["img/mnist", "th", 0.6] | image}
 \end{frame}
 
-\begin{frame}{Caltech 256}
-  300k objects/animals/persons
-  \V{["img/caltech256", "th", 0.6] | image}
-\end{frame}
-
 \begin{frame}{Street View House Numbers}
   600k annotated house numbers
   \V{["img/streetviewdataset", "th", 0.6] | image}
@@ -18,6 +13,14 @@
   \begin{itemize}
     \item 14M images (100M objective)
     \item 1M annotated
+  \end{itemize}
+  \V{["img/imagenet", "th", 0.5] | image}
+\end{frame}
+
+\begin{frame}{ImageNet 21k}
+  \begin{itemize}
+    \item 21 classes
+    \item 14M images
   \end{itemize}
   \V{["img/imagenet", "th", 0.5] | image}
 \end{frame}
