--- a/shared/latex/nn/cnn/data.tex
+++ b/shared/latex/nn/cnn/data.tex
@@ -3,11 +3,6 @@
   \V{["img/mnist", "th", 0.6] | image}
 \end{frame}
 
-\begin{frame}{Caltech 256}
-  300k objets/animaux/personnes
-  \V{["img/caltech256", "th", 0.6] | image}
-\end{frame}
-
 \begin{frame}{Street View House Numbers}
   600k numéros annotés
   \V{["img/streetviewdataset", "th", 0.6] | image}
@@ -19,6 +14,15 @@
     \item 20k synsets non-vides (objectif 100k)
     \item 14M images (objectif 100M)
     \item dont 1M sont annotées
+  \end{itemize}
+  \V{["img/imagenet", "th", 0.5] | image}
+\end{frame}
+
+\begin{frame}{ImageNet 21k}
+  Images annotés par synset de wordnet :
+  \begin{itemize}
+    \item 21 classes
+    \item 14M images
   \end{itemize}
   \V{["img/imagenet", "th", 0.5] | image}
 \end{frame}
