Change link to demo a Harley for CNN

--- a/shared/latex/nn/cnn/model.tex
+++ b/shared/latex/nn/cnn/model.tex
@@ -85,5 +85,5 @@
 \end{frame}
 
 \begin{frame}{Démonstration}
-  \bluelink{http://www.cs.cmu.edu/~aharley/nn_vis/cnn/3d.html}{Convolutional neural networks}
+  \bluelink{https://adamharley.com/nn_vis/cnn/3d.html}{Convolutional neural networks}
 \end{frame}
