--- a/shared/latex/nn/gradient-descent.tex
+++ b/shared/latex/nn/gradient-descent.tex
@@ -23,11 +23,17 @@
     \item Initialisation aléatoire du modèle
     \item Pour $n$ itérations~:
       \begin{itemize}
-        \item Pour $b$ batchs~:
+        \item Échantillonnage des données en batch de k exemples
+        \item Pour les $b$ batchs~:
         \begin{itemize}
-          \item \textbf{Forward}~: Passe avant du \textbf{batch} dans le modèle
-          \item Calcul de l'erreur par rapport aux sorties attendues
-          \item \textbf{Backward}~: Rétropropagation du gradient de l'erreur en fonction des paramètres dans le modèle (mise à jour du modèle)
+          \item \textbf{Forward}~: Calcul des prédictions $\hat{Y_i} = f_{\theta}(X_i), i\in[1..k]$
+          \item Calcul des erreurs $|\hat{Y_i}-Y_i|, i\in[1..k]$
+          \item \textbf{Backward}~: Mise à jour :
+          \[
+            \theta_j \leftarrow \theta_j - \gamma\frac{\partial{E}}{\partial{\theta_j}}
+          \]
+          pour chaque paramètre $\theta_j$ de notre modèle $f_\theta$ \\$\,$
+
           \item Vérification des critères d'arrêt
         \end{itemize}
       \end{itemize}
