Pimp gradient descent algorithm : final touch

--- a/shared/latex/nn/gradient-descent.tex
+++ b/shared/latex/nn/gradient-descent.tex
@@ -38,6 +38,8 @@
         \end{itemize}
       \end{itemize}
   \end{enumerate}
+
+  Où $n$, $k$ et $\gamma$ sont des hyperparamètres du modèle.
 \end{frame}
 
 
